# template_tauri_basic_crud

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
src/: main.rs
